# zip-fix-filename-encoding

./: .gitignore  CMakeLists.txt  config.h.cm.in  config.h.in  libzip-0.7.1.diff
tests/: CMakeLists.txt
